remove aos animations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/Images/SVG/page_logo.svg" type="image/x-icon">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -153,9 +153,7 @@
         <section class="back_layer_about py-about-us pb-media-about-sec" id="about">
             <div class="container_hero max-w-about-us-cont">
                 <div class="row">
-                    <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column pe-lg-4"
-                    data-aos="fade-up"
-                    data-aos-duration="3000">
+                    <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column pe-lg-4">
 
                         <div class="d-flex align-items-start justify-content-center">
                             <p class="fm-titling fw-700 fs-48 lh-56 text-clr max-w-about-main-text">The Future of Car
@@ -238,9 +236,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 position-relative d-max-lg-none video_box overflow-hidden px-0"
-                        data-aos="fade-up"
-     data-aos-duration="3000">
+                    <div class="col-lg-6 position-relative d-max-lg-none video_box overflow-hidden px-0">
                         <div class="position-absolute translate-middle start-50 top-50 z-1 video_play cursor">
                             <img src="./assets/Images/SVG/play_btn-svg.svg" alt="play btn">
                         </div>
@@ -341,7 +337,7 @@
                     Car?
                 </p>
                 <div class="row">
-                    <div class="col-lg-6 d-flex flex-column align-items-start justify-content-center"data-aos="zoom-in-up">
+                    <div class="col-lg-6 d-flex flex-column align-items-start justify-content-center">
                         <div class="d-flex align-items-center gap-media-choose-text">
                             <div class="d-flex align-items-center justify-content-center">
                                 <img src="./assets/Images/webp/why-choose-us-small-img-1.webp" alt="car images"
@@ -393,7 +389,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 mt-lg-0 mt-4"data-aos="zoom-in-up">
+                    <div class="col-lg-6 mt-lg-0 mt-4">
                         <div class="d-flex align-items-center justify-content-center">
                             <img src="./assets/Images/webp/choose-us-col-img.webp" alt="why choose us col image"
                                 class="w-100 h-100">
@@ -431,9 +427,7 @@
                             delivering immaculate
                             results every time.</p>
                     </div>
-                    <div class="position-relative video_box overflow-hidden" data-aos="fade-down"
-                    data-aos-easing="linear"
-                    data-aos-duration="1500">
+                    <div class="position-relative video_box overflow-hidden">
                         <div class="position-absolute translate-middle start-50 top-50 z-1 video_play cursor">
                             <img src="./assets/Images/SVG/play_btn-svg.svg" alt="play btn">
                         </div>
@@ -489,10 +483,7 @@
                         – we'll always give you a straight price, customised to your car's needs.</p>
                 </div>
                 <div class="accord d-flex flex-column align-items-center justify-content-center w-100">
-                    <div class="accordion-items w-100 d-flex flex-lg-row flex-column align-items-baseline p-accordion justify-content-between"
-                    data-aos="fade-right"
-                    data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">
+                    <div class="accordion-items w-100 d-flex flex-lg-row flex-column align-items-baseline p-accordion justify-content-between">
                         <div
                             class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p
@@ -537,11 +528,7 @@
                         </span>
                     </div>
 
-                    <div class="accordion-items flex-lg-row flex-column accord-2 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-left"
-                    data-aos-anchor="#example-anchor"
-                    data-aos-offset="500"
-                    data-aos-duration="500">
+                    <div class="accordion-items flex-lg-row flex-column accord-2 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -584,10 +571,7 @@
                         </span>
                     </div>
 
-                    <div class="accordion-items flex-lg-row flex-column accord-3 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-right"
-                    data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">
+                    <div class="accordion-items flex-lg-row flex-column accord-3 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -632,11 +616,7 @@
                         </span>
                     </div>
 
-                    <div class="accordion-items flex-lg-row flex-column accord-4 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-left"
-                    data-aos-anchor="#example-anchor"
-                    data-aos-offset="500"
-                    data-aos-duration="500">
+                    <div class="accordion-items flex-lg-row flex-column accord-4 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -679,9 +659,7 @@
                     </div>
                 </div>
 
-                <div class="d-flex align-items-center flex-column justify-content-center sub-box-changes" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="1500">
+                <div class="d-flex align-items-center flex-column justify-content-center sub-box-changes">
                     <p class="fm-titling fw-700 fs-32 lh-45 text-clr text-center fs-sub-text-main">Get an Instant Quote
                         Today</p>
                     <div class="d-flex align-items-center justify-content-center">
@@ -837,10 +815,7 @@
                     Still Unsure? Check Out These FAQs</p>
                 <div class="accord d-flex flex-column align-items-center justify-content-center w-100">
 
-                    <div class="accordion-items w-100 d-flex flex-column align-items-baseline p-accordion justify-content-between"
-                    data-aos="fade-right"
-                    data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">
+                    <div class="accordion-items w-100 d-flex flex-column align-items-baseline p-accordion justify-content-between">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p
@@ -873,11 +848,7 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-left"
-                    data-aos-anchor="#example-anchor"
-                    data-aos-offset="500"
-                    data-aos-duration="500">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -909,10 +880,7 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-right"
-                    data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -944,11 +912,7 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-left"
-                    data-aos-anchor="#example-anchor"
-                    data-aos-offset="500"
-                    data-aos-duration="500">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -980,11 +944,7 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-left"
-                    data-aos-anchor="#example-anchor"
-                    data-aos-offset="500"
-                    data-aos-duration="500">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Is
@@ -1016,10 +976,7 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-right"
-                    data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">How
@@ -1051,11 +1008,7 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-left"
-                    data-aos-anchor="#example-anchor"
-                    data-aos-offset="500"
-                    data-aos-duration="500">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Can
@@ -1087,10 +1040,7 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-right"
-                    data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -1122,11 +1072,7 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
-                    data-aos="fade-left"
-                    data-aos-anchor="#example-anchor"
-                    data-aos-offset="500"
-                    data-aos-duration="500">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Are
@@ -1159,8 +1105,7 @@
                     </div>
 
                 </div>
-                <div class="question_box" data-aos="fade-up"
-                data-aos-duration="3000">
+                <div class="question_box">
                     <p class="fm-acumin fw-700 fs-24 lh-32 text-clr fs-ques-box-text">Have a Different Question? Contact
                         Us Today</p>
                     <textarea class="w-100 rounded-3 text-area-box fm-acumin fw-400 fs-16 lh-24 p-3 outline-none"
@@ -1216,10 +1161,7 @@
                     innovation in car care.</p>
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-4 col-sm-6 d-flex align-items-center justify-content-center">
-                        <div class="insight-box" data-aos="fade-zoom-in"
-                        data-aos-easing="ease-in-back"
-                        data-aos-delay="300"
-                        data-aos-offset="0">
+                        <div class="insight-box">
                             <div class="d-flex align-items-center justify-content-center">
                                 <img src="./assets/Images/webp/insight-col-img-1.webp" alt="random images" class="w-100">
                             </div>
@@ -1230,9 +1172,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mt-md-0 mt-3 d-flex align-items-center justify-content-center">
-                        <div class="insight-box" data-aos="flip-left"
-                        data-aos-easing="ease-out-cubic"
-                        data-aos-duration="2000">
+                        <div class="insight-box">
                             <div class="d-flex align-items-center justify-content-center">
                                 <img src="./assets/Images/webp/insight-col-img-2.webp" alt="random images" class="w-100">
                             </div>
@@ -1243,10 +1183,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4 d-flex align-items-center justify-content-center">
-                        <div class="insight-box" data-aos="fade-zoom-in"
-                        data-aos-easing="ease-in-back"
-                        data-aos-delay="300"
-                        data-aos-offset="0">
+                        <div class="insight-box">
                             <div class="d-flex align-items-center justify-content-center">
                                 <img src="./assets/Images/webp/insight-col-img-3.webp" alt="random images" class="w-100">
                             </div>
@@ -1262,9 +1199,7 @@
             </div>
 
             <div class="mail-list-box w-100 mt-sub-box-insight d-flex align-items-center flex-column justify-content-center position-relative"
-                id="contact" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="1500">
+                id="contact">
                 <div class="position-absolute adjust-pos-mail cp">
                     <img src="./assets/Images/PNG/mail_box.png" alt="mail_box.png" class="w-100 h-100">
                 </div>
@@ -1449,7 +1384,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         var gallerySlider = new Swiper('.gallery-slider', {
             pagination: {
