--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <main class="overflow-hidden bg-white">
 
-        <!-- About us -->
+        <!-- the future of car -->
 
         <section class="back_layer_about py-about-us pb-media-about-sec" id="about">
             <div class="container_hero max-w-about-us-cont">
@@ -265,7 +265,7 @@
             <img src="./assets/Images/webp/cloud-bottom-img.webp" alt="cloud-bottom-img" class="w-100 h-100 -mt-1px">
         </div>
 
-        <!-- dry ice blasting -->
+        <!-- understanding dry -->
 
         <section class="bg-about-clr position-relative">
             <p class="fm-titling fw-700 mb-0 fs-48 lh-56 text-white text-center main-heading-media">Understanding Dry
@@ -808,7 +808,7 @@
                 class="w-100 h-100 opacity-50">
         </div>
 
-        <!-- main-content faq section -->
+        <!-- still unsure faq section -->
 
         <section class="pb-media-faq-sec">
             <div class="container_hero faq-section">
@@ -1122,7 +1122,7 @@
             <img src="./assets/Images/webp/faq-bottom-cloud.webp" alt="cloud-top-img" class="w-100 h-100">
         </div>
 
-        <!-- slogan section -->
+        <!-- blast the grime -->
 
         <section>
             <div class="container_slogan container">
@@ -1382,7 +1382,6 @@
             <img src="./assets/Images/SVG/scroll_top_icon.svg" alt="scroll to top icon" class="w-100 h-100">
         </div>
     </section>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
