--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
                         <div class="col-sm-3 d-flex align-items-start justify-content-start flex-column mt-sm-0 mt-3">
                             <p class="fm-acumin fw-700 fs-18 lh-27 text-white mb-3">Follow us</p>
                             <div class="d-flex align-items-center gap-media-choose-text">
-                                <a href="#"
+                                <a href="https://www.instagram.com/" target="_blank"
                                     class="svg-ftr-box d-flex align-items-center justify-content-center ho ver-element">
                                     <svg width="23" height="23" viewBox="0 0 23 23" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -1346,22 +1346,22 @@
                                             stroke="#FA6A00" stroke-width="1.46457" />
                                     </svg>
                                 </a>
-                                <a href="#"
+                                <a href="https://www.instagram.com/"
                                     class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 footer-link">Instagram</a>
                             </div>
                             <div class="d-flex align-items-center gap-media-choose-text mt-ftr-svg-lnks">
-                                <a href="#" class="svg-ftr-box d-flex align-items-center justify hov er-element">
+                                <a href="https://www.tiktok.com/login" target="_blank" class="svg-ftr-box d-flex align-items-center justify hov er-element">
                                     <svg width="18" height="20" viewBox="0 0 18 20" fill="none">
                                         <path
                                             d="M14.2806 3.13333C13.4959 2.26625 13.0634 1.1527 13.0638 0H9.51658V13.7778C9.48922 14.5234 9.16401 15.2296 8.60942 15.7477C8.05484 16.2658 7.31416 16.5555 6.54337 16.5556C4.91326 16.5556 3.55867 15.2667 3.55867 13.6667C3.55867 11.7556 5.46429 10.3222 7.4273 10.9111V7.4C3.46684 6.88889 0 9.86667 0 13.6667C0 17.3667 3.16837 20 6.53189 20C10.1365 20 13.0638 17.1667 13.0638 13.6667V6.67778C14.5022 7.67761 16.2291 8.21405 18 8.21111V4.77778C18 4.77778 15.8418 4.87778 14.2806 3.13333Z"
                                             fill="white" />
                                     </svg>
                                 </a>
-                                <a href="#"
+                                <a href="https://www.tiktok.com/login" target="_blank"
                                     class="fm-acumin fw-400 fs-16 lh-24 text-white opacity-70 footer-link">Tiktok</a>
                             </div>
                             <div class="d-flex align-items-center gap-media-choose-text mt-ftr-svg-lnks">
-                                <a href="#" class="svg-ftr-box d-flex align-items-center justify  hov er-element">
+                                <a href="https://www.youtube.com/" target="_blank" class="svg-ftr-box d-flex align-items-center justify  hov er-element">
                                     <svg width="21" height="17" viewBox="0 0 21 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
